--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/Raman0925/DevBumble#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.3",
     "validator": "^13.12.0"
   }
 }
