--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "validator": "^13.12.0"
